--- a/backtest/yestoday_increase.json
+++ b/backtest/yestoday_increase.json
@@ -1,371 +1,362 @@
 [
     {
-        "code": "002716",
-        "name": "湖南白银",
-        "bidding_increase": "4.57%",
-        "bidding_volume": "1,217.92万",
-        "bidding_amount": "4,737.71万",
-        "rank": "26",
-        "volume": "528.73万"
+        "code": "000519",
+        "name": "中兵红箭",
+        "bidding_increase": "9.99%",
+        "bidding_volume": "504.43万",
+        "bidding_amount": "7,107.42万",
+        "rank": "12",
+        "volume": "737.36万"
     },
     {
-        "code": "001389",
-        "name": "广合科技",
-        "bidding_increase": "0.44%",
-        "bidding_volume": "25.77万",
-        "bidding_amount": "1,185.42万",
-        "rank": "58",
-        "volume": "334.45万"
+        "code": "000777",
+        "name": "中核科技",
+        "bidding_increase": "2.29%",
+        "bidding_volume": "75.00万",
+        "bidding_amount": "1,442.25万",
+        "rank": "22",
+        "volume": "562.69万"
     },
     {
-        "code": "600490",
-        "name": "鹏欣资源",
-        "bidding_increase": "4.86%",
-        "bidding_volume": "804.81万",
-        "bidding_amount": "2,776.59万",
-        "rank": "60",
-        "volume": "333.46万"
+        "code": "000430",
+        "name": "张家界",
+        "bidding_increase": "-1.04%",
+        "bidding_volume": "6.04万",
+        "bidding_amount": "34.43万",
+        "rank": "79",
+        "volume": "288.32万"
     },
     {
-        "code": "002059",
-        "name": "云南旅游",
-        "bidding_increase": "-0.18%",
-        "bidding_volume": "23.01万",
-        "bidding_amount": "130.70万",
-        "rank": "86",
-        "volume": "270.57万"
+        "code": "001359",
+        "name": "平安电工",
+        "bidding_increase": "-0.96%",
+        "bidding_volume": "3.43万",
+        "bidding_amount": "81.60万",
+        "rank": "85",
+        "volume": "277.55万"
     },
     {
-        "code": "002828",
-        "name": "贝肯能源",
-        "bidding_increase": "-2.15%",
-        "bidding_volume": "24.71万",
-        "bidding_amount": "235.98万",
-        "rank": "103",
-        "volume": "241.91万"
+        "code": "600593",
+        "name": "大连圣亚",
+        "bidding_increase": "-0.74%",
+        "bidding_volume": "2.63万",
+        "bidding_amount": "52.89万",
+        "rank": "93",
+        "volume": "263.96万"
     },
     {
-        "code": "002295",
-        "name": "精艺股份",
-        "bidding_increase": "-1.87%",
-        "bidding_volume": "106.88万",
-        "bidding_amount": "843.28万",
-        "rank": "107",
-        "volume": "232.93万"
-    },
-    {
-        "code": "000856",
-        "name": "冀东装备",
-        "bidding_increase": "0.83%",
-        "bidding_volume": "32.04万",
-        "bidding_amount": "273.94万",
-        "rank": "132",
-        "volume": "204.95万"
-    },
-    {
-        "code": "000603",
-        "name": "盛达资源",
-        "bidding_increase": "3.00%",
-        "bidding_volume": "61.72万",
-        "bidding_amount": "931.97万",
-        "rank": "133",
-        "volume": "203.56万"
-    },
-    {
-        "code": "603789",
-        "name": "星光农机",
-        "bidding_increase": "0.00%",
-        "bidding_volume": "13.58万",
-        "bidding_amount": "113.80万",
-        "rank": "134",
-        "volume": "203.51万"
-    },
-    {
-        "code": "002313",
-        "name": "日海智能",
-        "bidding_increase": "-0.12%",
-        "bidding_volume": "4.82万",
-        "bidding_amount": "41.55万",
-        "rank": "152",
-        "volume": "191.30万"
-    },
-    {
-        "code": "002574",
-        "name": "明牌珠宝",
-        "bidding_increase": "2.89%",
-        "bidding_volume": "55.06万",
-        "bidding_amount": "352.38万",
-        "rank": "163",
-        "volume": "181.28万"
-    },
-    {
-        "code": "002552",
-        "name": "宝鼎科技",
-        "bidding_increase": "10.01%",
-        "bidding_volume": "233.09万",
-        "bidding_amount": "3,661.84万",
-        "rank": "174",
-        "volume": "171.91万"
-    },
-    {
-        "code": "603335",
-        "name": "迪生力",
-        "bidding_increase": "-1.16%",
-        "bidding_volume": "41.69万",
-        "bidding_amount": "212.62万",
-        "rank": "201",
-        "volume": "157.19万"
-    },
-    {
-        "code": "002102",
-        "name": "能特科技",
-        "bidding_increase": "0.00%",
-        "bidding_volume": "30.52万",
-        "bidding_amount": "78.13万",
-        "rank": "206",
-        "volume": "154.46万"
-    },
-    {
-        "code": "603082",
-        "name": "北自科技",
-        "bidding_increase": "0.24%",
-        "bidding_volume": "8,900.00",
-        "bidding_amount": "29.98万",
-        "rank": "235",
-        "volume": "140.04万"
-    },
-    {
-        "code": "603893",
-        "name": "瑞芯微",
-        "bidding_increase": "4.83%",
-        "bidding_volume": "9.48万",
-        "bidding_amount": "469.26万",
-        "rank": "272",
-        "volume": "123.37万"
-    },
-    {
-        "code": "001387",
-        "name": "雪祺电气",
-        "bidding_increase": "10.02%",
-        "bidding_volume": "81.73万",
-        "bidding_amount": "1,919.84万",
-        "rank": "282",
-        "volume": "119.46万"
-    },
-    {
-        "code": "002476",
-        "name": "宝莫股份",
-        "bidding_increase": "0.22%",
-        "bidding_volume": "11.69万",
-        "bidding_amount": "54.48万",
-        "rank": "284",
-        "volume": "119.10万"
-    },
-    {
-        "code": "600854",
-        "name": "春兰股份",
-        "bidding_increase": "10.07%",
-        "bidding_volume": "136.92万",
-        "bidding_amount": "643.52万",
-        "rank": "290",
-        "volume": "117.88万"
-    },
-    {
-        "code": "605378",
-        "name": "野马电池",
-        "bidding_increase": "-0.10%",
-        "bidding_volume": "2.47万",
-        "bidding_amount": "50.17万",
-        "rank": "315",
-        "volume": "107.67万"
-    },
-    {
-        "code": "605118",
-        "name": "力鼎光电",
-        "bidding_increase": "0.64%",
-        "bidding_volume": "6.88万",
-        "bidding_amount": "119.30万",
-        "rank": "327",
-        "volume": "105.76万"
-    },
-    {
-        "code": "002562",
-        "name": "兄弟科技",
-        "bidding_increase": "-0.30%",
-        "bidding_volume": "1.65万",
-        "bidding_amount": "5.48万",
-        "rank": "334",
-        "volume": "103.69万"
-    },
-    {
-        "code": "600363",
-        "name": "联创光电",
-        "bidding_increase": "2.34%",
-        "bidding_volume": "11.15万",
-        "bidding_amount": "312.06万",
-        "rank": "344",
-        "volume": "101.07万"
-    },
-    {
-        "code": "603276",
-        "name": "恒兴新材",
-        "bidding_increase": "-0.58%",
-        "bidding_volume": "9,000.00",
-        "bidding_amount": "18.61万",
-        "rank": "352",
-        "volume": "98.93万"
-    },
-    {
-        "code": "601956",
-        "name": "东贝集团",
-        "bidding_increase": "0.61%",
-        "bidding_volume": "2.00万",
-        "bidding_amount": "9.96万",
-        "rank": "382",
-        "volume": "92.90万"
-    },
-    {
-        "code": "002835",
-        "name": "同为股份",
-        "bidding_increase": "10.02%",
-        "bidding_volume": "37.43万",
-        "bidding_amount": "559.20万",
-        "rank": "387",
-        "volume": "91.83万"
-    },
-    {
-        "code": "603657",
-        "name": "春光科技",
-        "bidding_increase": "-0.98%",
-        "bidding_volume": "3.37万",
-        "bidding_amount": "40.84万",
-        "rank": "398",
-        "volume": "89.62万"
-    },
-    {
-        "code": "605336",
-        "name": "帅丰电器",
-        "bidding_increase": "9.96%",
-        "bidding_volume": "23.05万",
-        "bidding_amount": "318.09万",
-        "rank": "420",
-        "volume": "85.61万"
-    },
-    {
-        "code": "000622",
-        "name": "恒立实业",
-        "bidding_increase": "0.00%",
-        "bidding_volume": "21.02万",
-        "bidding_amount": "65.79万",
-        "rank": "467",
-        "volume": "79.90万"
-    },
-    {
-        "code": "603213",
-        "name": "镇洋发展",
-        "bidding_increase": "6.09%",
-        "bidding_volume": "30.66万",
-        "bidding_amount": "309.67万",
-        "rank": "468",
-        "volume": "79.88万"
-    },
-    {
-        "code": "603067",
-        "name": "振华股份",
+        "code": "002676",
+        "name": "顺威股份",
         "bidding_increase": "1.52%",
-        "bidding_volume": "5.70万",
-        "bidding_amount": "53.30万",
-        "rank": "502",
-        "volume": "75.19万"
+        "bidding_volume": "41.51万",
+        "bidding_amount": "166.46万",
+        "rank": "104",
+        "volume": "238.15万"
     },
     {
-        "code": "000059",
-        "name": "华锦股份",
-        "bidding_increase": "-0.36%",
-        "bidding_volume": "9.60万",
-        "bidding_amount": "52.99万",
-        "rank": "564",
-        "volume": "68.76万"
+        "code": "603712",
+        "name": "七一二",
+        "bidding_increase": "10.01%",
+        "bidding_volume": "208.96万",
+        "bidding_amount": "4,799.72万",
+        "rank": "108",
+        "volume": "234.74万"
     },
     {
-        "code": "603822",
-        "name": "嘉澳环保",
-        "bidding_increase": "-1.43%",
-        "bidding_volume": "5.29万",
-        "bidding_amount": "116.38万",
-        "rank": "569",
-        "volume": "68.40万"
+        "code": "000561",
+        "name": "烽火电子",
+        "bidding_increase": "6.11%",
+        "bidding_volume": "44.77万",
+        "bidding_amount": "334.43万",
+        "rank": "109",
+        "volume": "234.48万"
     },
     {
-        "code": "002264",
-        "name": "新华都",
-        "bidding_increase": "0.66%",
-        "bidding_volume": "1.27万",
-        "bidding_amount": "5.82万",
-        "rank": "580",
-        "volume": "67.11万"
+        "code": "002519",
+        "name": "银河电子",
+        "bidding_increase": "2.31%",
+        "bidding_volume": "89.86万",
+        "bidding_amount": "437.62万",
+        "rank": "122",
+        "volume": "222.32万"
     },
     {
-        "code": "603116",
-        "name": "红蜻蜓",
+        "code": "000682",
+        "name": "东方电子",
+        "bidding_increase": "0.10%",
+        "bidding_volume": "32.34万",
+        "bidding_amount": "315.32万",
+        "rank": "130",
+        "volume": "209.35万"
+    },
+    {
+        "code": "600764",
+        "name": "中国海防",
+        "bidding_increase": "3.42%",
+        "bidding_volume": "18.54万",
+        "bidding_amount": "398.61万",
+        "rank": "134",
+        "volume": "205.67万"
+    },
+    {
+        "code": "002651",
+        "name": "利君股份",
+        "bidding_increase": "5.74%",
+        "bidding_volume": "31.70万",
+        "bidding_amount": "187.03万",
+        "rank": "140",
+        "volume": "197.05万"
+    },
+    {
+        "code": "003029",
+        "name": "吉大正元",
         "bidding_increase": "0.00%",
-        "bidding_volume": "6,400.00",
-        "bidding_amount": "3.37万",
-        "rank": "622",
-        "volume": "61.73万"
+        "bidding_volume": "11.66万",
+        "bidding_amount": "211.75万",
+        "rank": "142",
+        "volume": "193.91万"
     },
     {
-        "code": "603968",
-        "name": "醋化股份",
-        "bidding_increase": "-0.81%",
-        "bidding_volume": "7,400.00",
-        "bidding_amount": "8.20万",
-        "rank": "625",
-        "volume": "61.64万"
+        "code": "600990",
+        "name": "四创电子",
+        "bidding_increase": "10.01%",
+        "bidding_volume": "90.99万",
+        "bidding_amount": "1,589.60万",
+        "rank": "148",
+        "volume": "188.38万"
     },
     {
-        "code": "603320",
-        "name": "迪贝电气",
-        "bidding_increase": "1.45%",
-        "bidding_volume": "1,600.00",
-        "bidding_amount": "2.02万",
-        "rank": "633",
-        "volume": "60.76万"
+        "code": "002231",
+        "name": "奥维通信",
+        "bidding_increase": "10.03%",
+        "bidding_volume": "106.65万",
+        "bidding_amount": "444.71万",
+        "rank": "154",
+        "volume": "180.69万"
     },
     {
-        "code": "001333",
-        "name": "光华股份",
-        "bidding_increase": "-0.12%",
-        "bidding_volume": "4,800.00",
-        "bidding_amount": "8.38万",
-        "rank": "868",
-        "volume": "45.80万"
+        "code": "603919",
+        "name": "金徽酒",
+        "bidding_increase": "4.14%",
+        "bidding_volume": "10.74万",
+        "bidding_amount": "216.20万",
+        "rank": "172",
+        "volume": "168.78万"
     },
     {
-        "code": "001228",
-        "name": "永泰运",
-        "bidding_increase": "2.20%",
-        "bidding_volume": "1.10万",
-        "bidding_amount": "28.05万",
-        "rank": "917",
-        "volume": "43.40万"
+        "code": "002568",
+        "name": "百润股份",
+        "bidding_increase": "-0.11%",
+        "bidding_volume": "4.11万",
+        "bidding_amount": "76.77万",
+        "rank": "192",
+        "volume": "159.72万"
     },
     {
-        "code": "603661",
-        "name": "恒林股份",
-        "bidding_increase": "-0.49%",
-        "bidding_volume": "2,900.00",
-        "bidding_amount": "12.35万",
-        "rank": "1011",
-        "volume": "38.70万"
+        "code": "600855",
+        "name": "航天长峰",
+        "bidding_increase": "0.65%",
+        "bidding_volume": "5.69万",
+        "bidding_amount": "43.81万",
+        "rank": "225",
+        "volume": "138.73万"
     },
     {
-        "code": "001202",
-        "name": "炬申股份",
-        "bidding_increase": "0.07%",
-        "bidding_volume": "2.15万",
-        "bidding_amount": "29.05万",
-        "rank": "1022",
-        "volume": "38.45万"
+        "code": "600189",
+        "name": "泉阳泉",
+        "bidding_increase": "0.41%",
+        "bidding_volume": "3.63万",
+        "bidding_amount": "26.46万",
+        "rank": "259",
+        "volume": "127.17万"
+    },
+    {
+        "code": "002977",
+        "name": "天箭科技",
+        "bidding_increase": "2.39%",
+        "bidding_volume": "1.05万",
+        "bidding_amount": "27.44万",
+        "rank": "293",
+        "volume": "114.60万"
+    },
+    {
+        "code": "603267",
+        "name": "鸿远电子",
+        "bidding_increase": "1.16%",
+        "bidding_volume": "1.11万",
+        "bidding_amount": "33.92万",
+        "rank": "346",
+        "volume": "102.27万"
+    },
+    {
+        "code": "603678",
+        "name": "火炬电子",
+        "bidding_increase": "0.21%",
+        "bidding_volume": "1,700.00",
+        "bidding_amount": "3.32万",
+        "rank": "349",
+        "volume": "101.83万"
+    },
+    {
+        "code": "600071",
+        "name": "凤凰光学",
+        "bidding_increase": "0.00%",
+        "bidding_volume": "2.97万",
+        "bidding_amount": "46.72万",
+        "rank": "357",
+        "volume": "101.05万"
+    },
+    {
+        "code": "002767",
+        "name": "先锋电子",
+        "bidding_increase": "2.39%",
+        "bidding_volume": "3.84万",
+        "bidding_amount": "46.08万",
+        "rank": "364",
+        "volume": "98.87万"
+    },
+    {
+        "code": "002730",
+        "name": "电光科技",
+        "bidding_increase": "-0.71%",
+        "bidding_volume": "7.10万",
+        "bidding_amount": "49.70万",
+        "rank": "365",
+        "volume": "98.27万"
+    },
+    {
+        "code": "002982",
+        "name": "湘佳股份",
+        "bidding_increase": "0.28%",
+        "bidding_volume": "4,380.00",
+        "bidding_amount": "6.31万",
+        "rank": "368",
+        "volume": "97.43万"
+    },
+    {
+        "code": "603838",
+        "name": "四通股份",
+        "bidding_increase": "-0.53%",
+        "bidding_volume": "13.81万",
+        "bidding_amount": "77.34万",
+        "rank": "374",
+        "volume": "96.04万"
+    },
+    {
+        "code": "002323",
+        "name": "雅博股份",
+        "bidding_increase": "0.00%",
+        "bidding_volume": "12.55万",
+        "bidding_amount": "17.57万",
+        "rank": "386",
+        "volume": "93.75万"
+    },
+    {
+        "code": "600382",
+        "name": "广东明珠",
+        "bidding_increase": "0.47%",
+        "bidding_volume": "2.62万",
+        "bidding_amount": "11.24万",
+        "rank": "443",
+        "volume": "82.68万"
+    },
+    {
+        "code": "603488",
+        "name": "展鹏科技",
+        "bidding_increase": "3.80%",
+        "bidding_volume": "8.70万",
+        "bidding_amount": "71.25万",
+        "rank": "466",
+        "volume": "78.90万"
+    },
+    {
+        "code": "003006",
+        "name": "百亚股份",
+        "bidding_increase": "6.07%",
+        "bidding_volume": "13.60万",
+        "bidding_amount": "263.70万",
+        "rank": "494",
+        "volume": "73.84万"
+    },
+    {
+        "code": "603076",
+        "name": "乐惠国际",
+        "bidding_increase": "-1.87%",
+        "bidding_volume": "17.70万",
+        "bidding_amount": "408.19万",
+        "rank": "499",
+        "volume": "73.31万"
+    },
+    {
+        "code": "000691",
+        "name": "亚太实业",
+        "bidding_increase": "4.89%",
+        "bidding_volume": "36.64万",
+        "bidding_amount": "125.68万",
+        "rank": "538",
+        "volume": "67.97万"
+    },
+    {
+        "code": "603507",
+        "name": "振江股份",
+        "bidding_increase": "3.76%",
+        "bidding_volume": "7.74万",
+        "bidding_amount": "187.93万",
+        "rank": "603",
+        "volume": "61.08万"
+    },
+    {
+        "code": "001259",
+        "name": "利仁科技",
+        "bidding_increase": "0.09%",
+        "bidding_volume": "3,700.00",
+        "bidding_amount": "8.01万",
+        "rank": "627",
+        "volume": "59.49万"
+    },
+    {
+        "code": "603848",
+        "name": "好太太",
+        "bidding_increase": "0.51%",
+        "bidding_volume": "2.08万",
+        "bidding_amount": "28.72万",
+        "rank": "667",
+        "volume": "56.76万"
+    },
+    {
+        "code": "603235",
+        "name": "天新药业",
+        "bidding_increase": "-0.21%",
+        "bidding_volume": "3,500.00",
+        "bidding_amount": "8.34万",
+        "rank": "675",
+        "volume": "56.38万"
+    },
+    {
+        "code": "603506",
+        "name": "南都物业",
+        "bidding_increase": "6.80%",
+        "bidding_volume": "26.99万",
+        "bidding_amount": "233.19万",
+        "rank": "689",
+        "volume": "55.37万"
+    },
+    {
+        "code": "603786",
+        "name": "科博达",
+        "bidding_increase": "9.59%",
+        "bidding_volume": "6.48万",
+        "bidding_amount": "421.46万",
+        "rank": "908",
+        "volume": "43.50万"
+    },
+    {
+        "code": "603151",
+        "name": "邦基科技",
+        "bidding_increase": "-1.55%",
+        "bidding_volume": "1.07万",
+        "bidding_amount": "12.23万",
+        "rank": "1089",
+        "volume": "36.65万"
     }
 ]
