--- a/backtest/yestoday_increase.json
+++ b/backtest/yestoday_increase.json
@@ -1,362 +1,272 @@
 [
     {
-        "code": "000519",
-        "name": "中兵红箭",
-        "bidding_increase": "9.99%",
-        "bidding_volume": "504.43万",
-        "bidding_amount": "7,107.42万",
-        "rank": "12",
-        "volume": "737.36万"
+        "code": "002611",
+        "name": "东方精工",
+        "bidding_increase": "-7.06%",
+        "bidding_volume": "1,844.79万",
+        "bidding_amount": "1.24亿",
+        "rank": "2",
+        "volume": "2,261.35万"
     },
     {
-        "code": "000777",
-        "name": "中核科技",
-        "bidding_increase": "2.29%",
-        "bidding_volume": "75.00万",
-        "bidding_amount": "1,442.25万",
-        "rank": "22",
-        "volume": "562.69万"
+        "code": "600584",
+        "name": "长电科技",
+        "bidding_increase": "10.00%",
+        "bidding_volume": "444.45万",
+        "bidding_amount": "1.36亿",
+        "rank": "19",
+        "volume": "734.65万"
     },
     {
-        "code": "000430",
-        "name": "张家界",
-        "bidding_increase": "-1.04%",
-        "bidding_volume": "6.04万",
-        "bidding_amount": "34.43万",
-        "rank": "79",
-        "volume": "288.32万"
+        "code": "600088",
+        "name": "中视传媒",
+        "bidding_increase": "-0.62%",
+        "bidding_volume": "21.63万",
+        "bidding_amount": "489.27万",
+        "rank": "28",
+        "volume": "652.52万"
     },
     {
-        "code": "001359",
-        "name": "平安电工",
-        "bidding_increase": "-0.96%",
-        "bidding_volume": "3.43万",
-        "bidding_amount": "81.60万",
-        "rank": "85",
-        "volume": "277.55万"
+        "code": "000586",
+        "name": "汇源通信",
+        "bidding_increase": "2.61%",
+        "bidding_volume": "216.98万",
+        "bidding_amount": "2,649.33万",
+        "rank": "32",
+        "volume": "626.45万"
+    },
+    {
+        "code": "002236",
+        "name": "大华股份",
+        "bidding_increase": "-1.05%",
+        "bidding_volume": "31.84万",
+        "bidding_amount": "600.82万",
+        "rank": "36",
+        "volume": "585.00万"
+    },
+    {
+        "code": "003015",
+        "name": "日久光电",
+        "bidding_increase": "-1.20%",
+        "bidding_volume": "124.28万",
+        "bidding_amount": "1,333.52万",
+        "rank": "49",
+        "volume": "464.26万"
+    },
+    {
+        "code": "600006",
+        "name": "东风汽车",
+        "bidding_increase": "-1.18%",
+        "bidding_volume": "24.33万",
+        "bidding_amount": "143.06万",
+        "rank": "66",
+        "volume": "377.30万"
+    },
+    {
+        "code": "000670",
+        "name": "盈方微",
+        "bidding_increase": "-0.18%",
+        "bidding_volume": "20.43万",
+        "bidding_amount": "114.61万",
+        "rank": "76",
+        "volume": "343.55万"
+    },
+    {
+        "code": "002579",
+        "name": "中京电子",
+        "bidding_increase": "2.33%",
+        "bidding_volume": "85.52万",
+        "bidding_amount": "675.61万",
+        "rank": "82",
+        "volume": "322.17万"
+    },
+    {
+        "code": "002217",
+        "name": "合力泰",
+        "bidding_increase": "5.88%",
+        "bidding_volume": "690.75万",
+        "bidding_amount": "1,243.35万",
+        "rank": "84",
+        "volume": "318.76万"
+    },
+    {
+        "code": "002177",
+        "name": "御银股份",
+        "bidding_increase": "0.52%",
+        "bidding_volume": "45.82万",
+        "bidding_amount": "177.78万",
+        "rank": "93",
+        "volume": "297.31万"
+    },
+    {
+        "code": "001298",
+        "name": "好上好",
+        "bidding_increase": "6.21%",
+        "bidding_volume": "73.96万",
+        "bidding_amount": "1,885.98万",
+        "rank": "97",
+        "volume": "282.15万"
+    },
+    {
+        "code": "600302",
+        "name": "标准股份",
+        "bidding_increase": "-3.46%",
+        "bidding_volume": "1,162.79万",
+        "bidding_amount": "5,197.67万",
+        "rank": "111",
+        "volume": "256.88万"
+    },
+    {
+        "code": "000056",
+        "name": "皇庭国际",
+        "bidding_increase": "0.00%",
+        "bidding_volume": "51.35万",
+        "bidding_amount": "137.10万",
+        "rank": "124",
+        "volume": "246.05万"
+    },
+    {
+        "code": "000595",
+        "name": "宝塔实业",
+        "bidding_increase": "-0.66%",
+        "bidding_volume": "11.55万",
+        "bidding_amount": "52.55万",
+        "rank": "137",
+        "volume": "228.91万"
+    },
+    {
+        "code": "000868",
+        "name": "安凯客车",
+        "bidding_increase": "-0.71%",
+        "bidding_volume": "1.51万",
+        "bidding_amount": "6.34万",
+        "rank": "140",
+        "volume": "223.69万"
     },
     {
         "code": "600593",
         "name": "大连圣亚",
-        "bidding_increase": "-0.74%",
-        "bidding_volume": "2.63万",
-        "bidding_amount": "52.89万",
-        "rank": "93",
-        "volume": "263.96万"
+        "bidding_increase": "-0.91%",
+        "bidding_volume": "1.75万",
+        "bidding_amount": "32.50万",
+        "rank": "212",
+        "volume": "157.70万"
     },
     {
-        "code": "002676",
-        "name": "顺威股份",
-        "bidding_increase": "1.52%",
-        "bidding_volume": "41.51万",
-        "bidding_amount": "166.46万",
-        "rank": "104",
-        "volume": "238.15万"
+        "code": "603131",
+        "name": "上海沪工",
+        "bidding_increase": "-0.23%",
+        "bidding_volume": "16.18万",
+        "bidding_amount": "210.34万",
+        "rank": "235",
+        "volume": "147.45万"
     },
     {
-        "code": "603712",
-        "name": "七一二",
-        "bidding_increase": "10.01%",
-        "bidding_volume": "208.96万",
-        "bidding_amount": "4,799.72万",
-        "rank": "108",
-        "volume": "234.74万"
+        "code": "002042",
+        "name": "华孚时尚",
+        "bidding_increase": "-2.90%",
+        "bidding_volume": "159.50万",
+        "bidding_amount": "641.19万",
+        "rank": "262",
+        "volume": "134.33万"
     },
     {
-        "code": "000561",
-        "name": "烽火电子",
-        "bidding_increase": "6.11%",
-        "bidding_volume": "44.77万",
-        "bidding_amount": "334.43万",
-        "rank": "109",
-        "volume": "234.48万"
+        "code": "002341",
+        "name": "新纶新材",
+        "bidding_increase": "-1.37%",
+        "bidding_volume": "20.49万",
+        "bidding_amount": "59.01万",
+        "rank": "264",
+        "volume": "133.23万"
     },
     {
-        "code": "002519",
-        "name": "银河电子",
-        "bidding_increase": "2.31%",
-        "bidding_volume": "89.86万",
-        "bidding_amount": "437.62万",
-        "rank": "122",
-        "volume": "222.32万"
-    },
-    {
-        "code": "000682",
-        "name": "东方电子",
-        "bidding_increase": "0.10%",
-        "bidding_volume": "32.34万",
-        "bidding_amount": "315.32万",
-        "rank": "130",
-        "volume": "209.35万"
-    },
-    {
-        "code": "600764",
-        "name": "中国海防",
-        "bidding_increase": "3.42%",
-        "bidding_volume": "18.54万",
-        "bidding_amount": "398.61万",
-        "rank": "134",
-        "volume": "205.67万"
-    },
-    {
-        "code": "002651",
-        "name": "利君股份",
-        "bidding_increase": "5.74%",
-        "bidding_volume": "31.70万",
-        "bidding_amount": "187.03万",
-        "rank": "140",
-        "volume": "197.05万"
-    },
-    {
-        "code": "003029",
-        "name": "吉大正元",
-        "bidding_increase": "0.00%",
-        "bidding_volume": "11.66万",
-        "bidding_amount": "211.75万",
-        "rank": "142",
-        "volume": "193.91万"
-    },
-    {
-        "code": "600990",
-        "name": "四创电子",
-        "bidding_increase": "10.01%",
-        "bidding_volume": "90.99万",
-        "bidding_amount": "1,589.60万",
-        "rank": "148",
-        "volume": "188.38万"
-    },
-    {
-        "code": "002231",
-        "name": "奥维通信",
-        "bidding_increase": "10.03%",
-        "bidding_volume": "106.65万",
-        "bidding_amount": "444.71万",
-        "rank": "154",
-        "volume": "180.69万"
-    },
-    {
-        "code": "603919",
-        "name": "金徽酒",
-        "bidding_increase": "4.14%",
-        "bidding_volume": "10.74万",
-        "bidding_amount": "216.20万",
-        "rank": "172",
-        "volume": "168.78万"
-    },
-    {
-        "code": "002568",
-        "name": "百润股份",
-        "bidding_increase": "-0.11%",
-        "bidding_volume": "4.11万",
-        "bidding_amount": "76.77万",
-        "rank": "192",
-        "volume": "159.72万"
-    },
-    {
-        "code": "600855",
-        "name": "航天长峰",
-        "bidding_increase": "0.65%",
-        "bidding_volume": "5.69万",
-        "bidding_amount": "43.81万",
-        "rank": "225",
-        "volume": "138.73万"
-    },
-    {
-        "code": "600189",
-        "name": "泉阳泉",
-        "bidding_increase": "0.41%",
-        "bidding_volume": "3.63万",
-        "bidding_amount": "26.46万",
-        "rank": "259",
-        "volume": "127.17万"
-    },
-    {
-        "code": "002977",
-        "name": "天箭科技",
-        "bidding_increase": "2.39%",
-        "bidding_volume": "1.05万",
-        "bidding_amount": "27.44万",
-        "rank": "293",
-        "volume": "114.60万"
-    },
-    {
-        "code": "603267",
-        "name": "鸿远电子",
-        "bidding_increase": "1.16%",
-        "bidding_volume": "1.11万",
-        "bidding_amount": "33.92万",
-        "rank": "346",
-        "volume": "102.27万"
-    },
-    {
-        "code": "603678",
-        "name": "火炬电子",
-        "bidding_increase": "0.21%",
-        "bidding_volume": "1,700.00",
-        "bidding_amount": "3.32万",
-        "rank": "349",
-        "volume": "101.83万"
-    },
-    {
-        "code": "600071",
-        "name": "凤凰光学",
-        "bidding_increase": "0.00%",
-        "bidding_volume": "2.97万",
-        "bidding_amount": "46.72万",
-        "rank": "357",
-        "volume": "101.05万"
+        "code": "000779",
+        "name": "甘咨询",
+        "bidding_increase": "-1.29%",
+        "bidding_volume": "2.89万",
+        "bidding_amount": "24.28万",
+        "rank": "320",
+        "volume": "112.14万"
     },
     {
         "code": "002767",
         "name": "先锋电子",
-        "bidding_increase": "2.39%",
-        "bidding_volume": "3.84万",
-        "bidding_amount": "46.08万",
-        "rank": "364",
-        "volume": "98.87万"
+        "bidding_increase": "-1.05%",
+        "bidding_volume": "1.25万",
+        "bidding_amount": "15.36万",
+        "rank": "337",
+        "volume": "106.43万"
     },
     {
-        "code": "002730",
-        "name": "电光科技",
-        "bidding_increase": "-0.71%",
-        "bidding_volume": "7.10万",
-        "bidding_amount": "49.70万",
-        "rank": "365",
-        "volume": "98.27万"
+        "code": "600979",
+        "name": "广安爱众",
+        "bidding_increase": "-0.66%",
+        "bidding_volume": "9.57万",
+        "bidding_amount": "29.00万",
+        "rank": "340",
+        "volume": "106.15万"
     },
     {
-        "code": "002982",
-        "name": "湘佳股份",
-        "bidding_increase": "0.28%",
-        "bidding_volume": "4,380.00",
-        "bidding_amount": "6.31万",
-        "rank": "368",
-        "volume": "97.43万"
+        "code": "002620",
+        "name": "瑞和股份",
+        "bidding_increase": "1.38%",
+        "bidding_volume": "71.33万",
+        "bidding_amount": "262.49万",
+        "rank": "351",
+        "volume": "103.99万"
     },
     {
-        "code": "603838",
-        "name": "四通股份",
+        "code": "600207",
+        "name": "安彩高科",
+        "bidding_increase": "-0.51%",
+        "bidding_volume": "8.17万",
+        "bidding_amount": "31.70万",
+        "rank": "355",
+        "volume": "102.76万"
+    },
+    {
+        "code": "002165",
+        "name": "红宝丽",
+        "bidding_increase": "-0.94%",
+        "bidding_volume": "1.78万",
+        "bidding_amount": "5.66万",
+        "rank": "380",
+        "volume": "95.98万"
+    },
+    {
+        "code": "603261",
+        "name": "立航科技",
+        "bidding_increase": "0.34%",
+        "bidding_volume": "6,800.00",
+        "bidding_amount": "16.05万",
+        "rank": "412",
+        "volume": "87.38万"
+    },
+    {
+        "code": "000576",
+        "name": "甘化科工",
+        "bidding_increase": "1.42%",
+        "bidding_volume": "5.10万",
+        "bidding_amount": "36.41万",
+        "rank": "438",
+        "volume": "83.50万"
+    },
+    {
+        "code": "603863",
+        "name": "松炀资源",
+        "bidding_increase": "-0.93%",
+        "bidding_volume": "1.29万",
+        "bidding_amount": "49.72万",
+        "rank": "594",
+        "volume": "61.21万"
+    },
+    {
+        "code": "603580",
+        "name": "艾艾精工",
         "bidding_increase": "-0.53%",
-        "bidding_volume": "13.81万",
-        "bidding_amount": "77.34万",
-        "rank": "374",
-        "volume": "96.04万"
-    },
-    {
-        "code": "002323",
-        "name": "雅博股份",
-        "bidding_increase": "0.00%",
-        "bidding_volume": "12.55万",
-        "bidding_amount": "17.57万",
-        "rank": "386",
-        "volume": "93.75万"
-    },
-    {
-        "code": "600382",
-        "name": "广东明珠",
-        "bidding_increase": "0.47%",
-        "bidding_volume": "2.62万",
-        "bidding_amount": "11.24万",
-        "rank": "443",
-        "volume": "82.68万"
-    },
-    {
-        "code": "603488",
-        "name": "展鹏科技",
-        "bidding_increase": "3.80%",
-        "bidding_volume": "8.70万",
-        "bidding_amount": "71.25万",
-        "rank": "466",
-        "volume": "78.90万"
-    },
-    {
-        "code": "003006",
-        "name": "百亚股份",
-        "bidding_increase": "6.07%",
-        "bidding_volume": "13.60万",
-        "bidding_amount": "263.70万",
-        "rank": "494",
-        "volume": "73.84万"
-    },
-    {
-        "code": "603076",
-        "name": "乐惠国际",
-        "bidding_increase": "-1.87%",
-        "bidding_volume": "17.70万",
-        "bidding_amount": "408.19万",
-        "rank": "499",
-        "volume": "73.31万"
-    },
-    {
-        "code": "000691",
-        "name": "亚太实业",
-        "bidding_increase": "4.89%",
-        "bidding_volume": "36.64万",
-        "bidding_amount": "125.68万",
-        "rank": "538",
-        "volume": "67.97万"
-    },
-    {
-        "code": "603507",
-        "name": "振江股份",
-        "bidding_increase": "3.76%",
-        "bidding_volume": "7.74万",
-        "bidding_amount": "187.93万",
-        "rank": "603",
-        "volume": "61.08万"
-    },
-    {
-        "code": "001259",
-        "name": "利仁科技",
-        "bidding_increase": "0.09%",
-        "bidding_volume": "3,700.00",
-        "bidding_amount": "8.01万",
+        "bidding_volume": "1.37万",
+        "bidding_amount": "12.88万",
         "rank": "627",
-        "volume": "59.49万"
-    },
-    {
-        "code": "603848",
-        "name": "好太太",
-        "bidding_increase": "0.51%",
-        "bidding_volume": "2.08万",
-        "bidding_amount": "28.72万",
-        "rank": "667",
-        "volume": "56.76万"
-    },
-    {
-        "code": "603235",
-        "name": "天新药业",
-        "bidding_increase": "-0.21%",
-        "bidding_volume": "3,500.00",
-        "bidding_amount": "8.34万",
-        "rank": "675",
-        "volume": "56.38万"
-    },
-    {
-        "code": "603506",
-        "name": "南都物业",
-        "bidding_increase": "6.80%",
-        "bidding_volume": "26.99万",
-        "bidding_amount": "233.19万",
-        "rank": "689",
-        "volume": "55.37万"
-    },
-    {
-        "code": "603786",
-        "name": "科博达",
-        "bidding_increase": "9.59%",
-        "bidding_volume": "6.48万",
-        "bidding_amount": "421.46万",
-        "rank": "908",
-        "volume": "43.50万"
-    },
-    {
-        "code": "603151",
-        "name": "邦基科技",
-        "bidding_increase": "-1.55%",
-        "bidding_volume": "1.07万",
-        "bidding_amount": "12.23万",
-        "rank": "1089",
-        "volume": "36.65万"
+        "volume": "58.13万"
     }
 ]
