--- a/backtest/today_increase.json
+++ b/backtest/today_increase.json
@@ -1,362 +1,230 @@
 [
     {
-        "code": "002611",
-        "name": "东方精工",
-        "bidding_increase": "-7.06%",
-        "bidding_volume": "1,844.79万",
-        "bidding_amount": "1.24亿",
-        "rank": "2",
-        "volume": "2,261.35万",
-        "next_bidding_increase": "-0.25%",
-        "next_bidding_volume": "1,108.67万",
-        "next_bidding_amount": "8,780.67万"
-    },
-    {
-        "code": "600584",
-        "name": "长电科技",
-        "bidding_increase": "10.00%",
-        "bidding_volume": "444.45万",
-        "bidding_amount": "1.36亿",
-        "rank": "19",
-        "volume": "734.65万",
-        "next_bidding_increase": "-0.75%",
-        "next_bidding_volume": "379.77万",
-        "next_bidding_amount": "1.16亿"
-    },
-    {
-        "code": "600088",
-        "name": "中视传媒",
-        "bidding_increase": "-0.62%",
-        "bidding_volume": "21.63万",
-        "bidding_amount": "489.27万",
-        "rank": "28",
-        "volume": "652.52万",
-        "next_bidding_increase": "-1.16%",
-        "next_bidding_volume": "97.05万",
-        "next_bidding_amount": "2,401.99万"
-    },
-    {
-        "code": "000586",
-        "name": "汇源通信",
-        "bidding_increase": "2.61%",
-        "bidding_volume": "216.98万",
-        "bidding_amount": "2,649.33万",
-        "rank": "32",
-        "volume": "626.45万",
-        "next_bidding_increase": "-9.47%",
-        "next_bidding_volume": "190.07万",
-        "next_bidding_amount": "2,252.33万"
-    },
-    {
-        "code": "002236",
-        "name": "大华股份",
-        "bidding_increase": "-1.05%",
-        "bidding_volume": "31.84万",
-        "bidding_amount": "600.82万",
-        "rank": "36",
-        "volume": "585.00万",
-        "next_bidding_increase": "-0.95%",
-        "next_bidding_volume": "660.00万",
-        "next_bidding_amount": "1.37亿"
-    },
-    {
-        "code": "003015",
-        "name": "日久光电",
-        "bidding_increase": "-1.20%",
-        "bidding_volume": "124.28万",
-        "bidding_amount": "1,333.52万",
-        "rank": "49",
-        "volume": "464.26万",
-        "next_bidding_increase": "-2.93%",
-        "next_bidding_volume": "76.41万",
-        "next_bidding_amount": "886.36万"
-    },
-    {
-        "code": "600006",
-        "name": "东风汽车",
-        "bidding_increase": "-1.18%",
-        "bidding_volume": "24.33万",
-        "bidding_amount": "143.06万",
-        "rank": "66",
-        "volume": "377.30万",
-        "next_bidding_increase": "1.68%",
-        "next_bidding_volume": "858.05万",
-        "next_bidding_amount": "5,714.61万"
-    },
-    {
-        "code": "000670",
-        "name": "盈方微",
-        "bidding_increase": "-0.18%",
-        "bidding_volume": "20.43万",
-        "bidding_amount": "114.61万",
-        "rank": "76",
-        "volume": "343.55万",
-        "next_bidding_increase": "-0.32%",
-        "next_bidding_volume": "227.85万",
-        "next_bidding_amount": "1,403.56万"
-    },
-    {
-        "code": "002579",
-        "name": "中京电子",
-        "bidding_increase": "2.33%",
-        "bidding_volume": "85.52万",
-        "bidding_amount": "675.61万",
-        "rank": "82",
-        "volume": "322.17万",
-        "next_bidding_increase": "2.83%",
-        "next_bidding_volume": "310.44万",
-        "next_bidding_amount": "2,710.14万"
-    },
-    {
-        "code": "002217",
-        "name": "合力泰",
-        "bidding_increase": "5.88%",
-        "bidding_volume": "690.75万",
-        "bidding_amount": "1,243.35万",
-        "rank": "84",
-        "volume": "318.76万",
-        "next_bidding_increase": "6.95%",
-        "next_bidding_volume": "2,422.21万",
-        "next_bidding_amount": "4,844.42万"
-    },
-    {
-        "code": "002177",
-        "name": "御银股份",
-        "bidding_increase": "0.52%",
-        "bidding_volume": "45.82万",
-        "bidding_amount": "177.78万",
-        "rank": "93",
-        "volume": "297.31万",
-        "next_bidding_increase": "0.24%",
-        "next_bidding_volume": "319.28万",
-        "next_bidding_amount": "1,360.12万"
-    },
-    {
-        "code": "001298",
-        "name": "好上好",
-        "bidding_increase": "6.21%",
-        "bidding_volume": "73.96万",
-        "bidding_amount": "1,885.98万",
-        "rank": "97",
-        "volume": "282.15万",
-        "next_bidding_increase": "9.81%",
-        "next_bidding_volume": "69.70万",
-        "next_bidding_amount": "2,021.30万"
-    },
-    {
-        "code": "600302",
-        "name": "标准股份",
-        "bidding_increase": "-3.46%",
-        "bidding_volume": "1,162.79万",
-        "bidding_amount": "5,197.67万",
-        "rank": "111",
-        "volume": "256.88万",
-        "next_bidding_increase": "-5.11%",
-        "next_bidding_volume": "153.20万",
-        "next_bidding_amount": "739.96万"
-    },
-    {
-        "code": "000056",
-        "name": "皇庭国际",
+        "code": "002786",
+        "name": "银宝山新",
         "bidding_increase": "0.00%",
-        "bidding_volume": "51.35万",
-        "bidding_amount": "137.10万",
-        "rank": "124",
-        "volume": "246.05万",
-        "next_bidding_increase": "-1.70%",
-        "next_bidding_volume": "316.43万",
-        "next_bidding_amount": "914.48万"
+        "bidding_volume": "87.90万",
+        "bidding_amount": "1,288.61万",
+        "rank": "1",
+        "volume": "2,003.50万",
+        "next_bidding_increase": "-3.91%",
+        "next_bidding_volume": "260.98万",
+        "next_bidding_amount": "4,045.19万"
     },
     {
-        "code": "000595",
-        "name": "宝塔实业",
-        "bidding_increase": "-0.66%",
-        "bidding_volume": "11.55万",
-        "bidding_amount": "52.55万",
-        "rank": "137",
-        "volume": "228.91万",
-        "next_bidding_increase": "0.99%",
-        "next_bidding_volume": "339.31万",
-        "next_bidding_amount": "1,727.09万"
+        "code": "600630",
+        "name": "龙头股份",
+        "bidding_increase": "-1.68%",
+        "bidding_volume": "818.89万",
+        "bidding_amount": "9,572.82万",
+        "rank": "2",
+        "volume": "1,354.16万",
+        "next_bidding_increase": "1.15%",
+        "next_bidding_volume": "594.43万",
+        "next_bidding_amount": "7,864.31万"
     },
     {
-        "code": "000868",
-        "name": "安凯客车",
-        "bidding_increase": "-0.71%",
-        "bidding_volume": "1.51万",
-        "bidding_amount": "6.34万",
-        "rank": "140",
-        "volume": "223.69万",
-        "next_bidding_increase": "-0.22%",
-        "next_bidding_volume": "361.97万",
-        "next_bidding_amount": "1,679.54万"
+        "code": "603825",
+        "name": "华扬联众",
+        "bidding_increase": "0.69%",
+        "bidding_volume": "72.06万",
+        "bidding_amount": "1,059.28万",
+        "rank": "22",
+        "volume": "636.06万",
+        "next_bidding_increase": "-6.60%",
+        "next_bidding_volume": "178.45万",
+        "next_bidding_amount": "2,676.75万"
     },
     {
-        "code": "600593",
-        "name": "大连圣亚",
-        "bidding_increase": "-0.91%",
-        "bidding_volume": "1.75万",
-        "bidding_amount": "32.50万",
-        "rank": "212",
-        "volume": "157.70万",
-        "next_bidding_increase": "1.36%",
-        "next_bidding_volume": "33.47万",
-        "next_bidding_amount": "699.19万"
+        "code": "605011",
+        "name": "杭州热电",
+        "bidding_increase": "0.37%",
+        "bidding_volume": "11.21万",
+        "bidding_amount": "302.67万",
+        "rank": "37",
+        "volume": "464.37万",
+        "next_bidding_increase": "0.03%",
+        "next_bidding_volume": "37.96万",
+        "next_bidding_amount": "1,123.62万"
     },
     {
-        "code": "603131",
-        "name": "上海沪工",
-        "bidding_increase": "-0.23%",
-        "bidding_volume": "16.18万",
-        "bidding_amount": "210.34万",
-        "rank": "235",
-        "volume": "147.45万",
-        "next_bidding_increase": "7.75%",
-        "next_bidding_volume": "250.83万",
-        "next_bidding_amount": "3,872.82万"
+        "code": "000810",
+        "name": "创维数字",
+        "bidding_increase": "7.12%",
+        "bidding_volume": "147.04万",
+        "bidding_amount": "2,080.62万",
+        "rank": "57",
+        "volume": "352.09万",
+        "next_bidding_increase": "-3.72%",
+        "next_bidding_volume": "137.61万",
+        "next_bidding_amount": "1,925.16万"
     },
     {
-        "code": "002042",
-        "name": "华孚时尚",
-        "bidding_increase": "-2.90%",
-        "bidding_volume": "159.50万",
-        "bidding_amount": "641.19万",
-        "rank": "262",
-        "volume": "134.33万",
-        "next_bidding_increase": "4.84%",
-        "next_bidding_volume": "977.03万",
-        "next_bidding_amount": "4,660.43万"
+        "code": "000705",
+        "name": "浙江震元",
+        "bidding_increase": "-0.99%",
+        "bidding_volume": "37.68万",
+        "bidding_amount": "340.25万",
+        "rank": "63",
+        "volume": "330.16万",
+        "next_bidding_increase": "0.30%",
+        "next_bidding_volume": "235.33万",
+        "next_bidding_amount": "2,367.42万"
     },
     {
-        "code": "002341",
-        "name": "新纶新材",
-        "bidding_increase": "-1.37%",
-        "bidding_volume": "20.49万",
-        "bidding_amount": "59.01万",
-        "rank": "264",
-        "volume": "133.23万",
-        "next_bidding_increase": "-2.49%",
-        "next_bidding_volume": "207.00万",
-        "next_bidding_amount": "647.91万"
+        "code": "605086",
+        "name": "龙高股份",
+        "bidding_increase": "1.43%",
+        "bidding_volume": "25.67万",
+        "bidding_amount": "803.21万",
+        "rank": "71",
+        "volume": "315.08万",
+        "next_bidding_increase": "-3.01%",
+        "next_bidding_volume": "44.44万",
+        "next_bidding_amount": "1,462.96万"
     },
     {
-        "code": "000779",
-        "name": "甘咨询",
-        "bidding_increase": "-1.29%",
-        "bidding_volume": "2.89万",
-        "bidding_amount": "24.28万",
-        "rank": "320",
-        "volume": "112.14万",
-        "next_bidding_increase": "-1.82%",
-        "next_bidding_volume": "65.24万",
-        "next_bidding_amount": "599.56万"
-    },
-    {
-        "code": "002767",
-        "name": "先锋电子",
-        "bidding_increase": "-1.05%",
-        "bidding_volume": "1.25万",
-        "bidding_amount": "15.36万",
-        "rank": "337",
-        "volume": "106.43万",
-        "next_bidding_increase": "-0.59%",
-        "next_bidding_volume": "60.47万",
-        "next_bidding_amount": "821.18万"
-    },
-    {
-        "code": "600979",
-        "name": "广安爱众",
-        "bidding_increase": "-0.66%",
-        "bidding_volume": "9.57万",
-        "bidding_amount": "29.00万",
-        "rank": "340",
-        "volume": "106.15万",
-        "next_bidding_increase": "10.12%",
-        "next_bidding_volume": "888.17万",
-        "next_bidding_amount": "3,286.24万"
-    },
-    {
-        "code": "002620",
-        "name": "瑞和股份",
-        "bidding_increase": "1.38%",
-        "bidding_volume": "71.33万",
-        "bidding_amount": "262.49万",
-        "rank": "351",
-        "volume": "103.99万",
+        "code": "002395",
+        "name": "双象股份",
+        "bidding_increase": "0.85%",
+        "bidding_volume": "14.63万",
+        "bidding_amount": "190.04万",
+        "rank": "92",
+        "volume": "258.73万",
         "next_bidding_increase": "0.00%",
-        "next_bidding_volume": "317.76万",
-        "next_bidding_amount": "1,267.86万"
+        "next_bidding_volume": "108.62万",
+        "next_bidding_amount": "1,539.15万"
     },
     {
-        "code": "600207",
-        "name": "安彩高科",
-        "bidding_increase": "-0.51%",
-        "bidding_volume": "8.17万",
-        "bidding_amount": "31.70万",
-        "rank": "355",
-        "volume": "102.76万",
-        "next_bidding_increase": "2.56%",
-        "next_bidding_volume": "349.22万",
-        "next_bidding_amount": "1,536.57万"
+        "code": "000993",
+        "name": "闽东电力",
+        "bidding_increase": "0.33%",
+        "bidding_volume": "3.30万",
+        "bidding_amount": "30.23万",
+        "rank": "109",
+        "volume": "220.11万",
+        "next_bidding_increase": "-1.99%",
+        "next_bidding_volume": "92.12万",
+        "next_bidding_amount": "906.46万"
     },
     {
-        "code": "002165",
-        "name": "红宝丽",
-        "bidding_increase": "-0.94%",
-        "bidding_volume": "1.78万",
-        "bidding_amount": "5.66万",
-        "rank": "380",
-        "volume": "95.98万",
-        "next_bidding_increase": "0.00%",
-        "next_bidding_volume": "265.07万",
-        "next_bidding_amount": "935.70万"
+        "code": "605286",
+        "name": "同力日升",
+        "bidding_increase": "-0.19%",
+        "bidding_volume": "13.82万",
+        "bidding_amount": "356.56万",
+        "rank": "126",
+        "volume": "186.34万",
+        "next_bidding_increase": "-3.31%",
+        "next_bidding_volume": "31.52万",
+        "next_bidding_amount": "866.80万"
     },
     {
-        "code": "603261",
-        "name": "立航科技",
-        "bidding_increase": "0.34%",
-        "bidding_volume": "6,800.00",
-        "bidding_amount": "16.05万",
-        "rank": "412",
-        "volume": "87.38万",
+        "code": "603103",
+        "name": "横店影视",
+        "bidding_increase": "0.00%",
+        "bidding_volume": "4,900.00",
+        "bidding_amount": "8.73万",
+        "rank": "129",
+        "volume": "183.40万",
+        "next_bidding_increase": "9.24%",
+        "next_bidding_volume": "101.09万",
+        "next_bidding_amount": "2,163.33万"
+    },
+    {
+        "code": "603273",
+        "name": "天元智能",
+        "bidding_increase": "1.90%",
+        "bidding_volume": "10.60万",
+        "bidding_amount": "250.69万",
+        "rank": "139",
+        "volume": "175.41万",
+        "next_bidding_increase": "-3.45%",
+        "next_bidding_volume": "48.47万",
+        "next_bidding_amount": "1,194.79万"
+    },
+    {
+        "code": "002952",
+        "name": "亚世光电",
+        "bidding_increase": "0.72%",
+        "bidding_volume": "3.61万",
+        "bidding_amount": "65.74万",
+        "rank": "179",
+        "volume": "139.53万",
         "next_bidding_increase": "10.01%",
-        "next_bidding_volume": "28.59万",
-        "next_bidding_amount": "813.67万"
+        "next_bidding_volume": "50.05万",
+        "next_bidding_amount": "1,095.09万"
     },
     {
-        "code": "000576",
-        "name": "甘化科工",
-        "bidding_increase": "1.42%",
-        "bidding_volume": "5.10万",
-        "bidding_amount": "36.41万",
-        "rank": "438",
-        "volume": "83.50万",
-        "next_bidding_increase": "-1.55%",
-        "next_bidding_volume": "49.46万",
-        "next_bidding_amount": "376.89万"
+        "code": "603389",
+        "name": "亚振家居",
+        "bidding_increase": "0.30%",
+        "bidding_volume": "11.81万",
+        "bidding_amount": "77.83万",
+        "rank": "214",
+        "volume": "120.66万",
+        "next_bidding_increase": "9.96%",
+        "next_bidding_volume": "100.11万",
+        "next_bidding_amount": "795.90万"
     },
     {
-        "code": "603863",
-        "name": "松炀资源",
-        "bidding_increase": "-0.93%",
-        "bidding_volume": "1.29万",
-        "bidding_amount": "49.72万",
-        "rank": "594",
-        "volume": "61.21万",
-        "next_bidding_increase": "0.23%",
-        "next_bidding_volume": "14.83万",
-        "next_bidding_amount": "636.06万"
+        "code": "002890",
+        "name": "弘宇股份",
+        "bidding_increase": "0.89%",
+        "bidding_volume": "3.67万",
+        "bidding_amount": "54.32万",
+        "rank": "222",
+        "volume": "118.50万",
+        "next_bidding_increase": "2.17%",
+        "next_bidding_volume": "87.04万",
+        "next_bidding_amount": "1,435.29万"
     },
     {
-        "code": "603580",
-        "name": "艾艾精工",
-        "bidding_increase": "-0.53%",
-        "bidding_volume": "1.37万",
-        "bidding_amount": "12.88万",
-        "rank": "627",
-        "volume": "58.13万",
-        "next_bidding_increase": "5.58%",
-        "next_bidding_volume": "116.31万",
-        "next_bidding_amount": "1,277.08万"
+        "code": "002972",
+        "name": "科安达",
+        "bidding_increase": "-0.09%",
+        "bidding_volume": "1.73万",
+        "bidding_amount": "20.02万",
+        "rank": "241",
+        "volume": "110.55万",
+        "next_bidding_increase": "-0.39%",
+        "next_bidding_volume": "75.85万",
+        "next_bidding_amount": "962.54万"
+    },
+    {
+        "code": "603489",
+        "name": "八方股份",
+        "bidding_increase": "-0.04%",
+        "bidding_volume": "1.21万",
+        "bidding_amount": "61.37万",
+        "rank": "303",
+        "volume": "90.27万",
+        "next_bidding_increase": "1.97%",
+        "next_bidding_volume": "6.50万",
+        "next_bidding_amount": "369.92万"
+    },
+    {
+        "code": "600421",
+        "name": "华嵘控股",
+        "bidding_increase": "0.10%",
+        "bidding_volume": "8,700.00",
+        "bidding_amount": "9.08万",
+        "rank": "309",
+        "volume": "89.15万",
+        "next_bidding_increase": "10.03%",
+        "next_bidding_volume": "127.32万",
+        "next_bidding_amount": "1,606.72万"
+    },
+    {
+        "code": "603722",
+        "name": "阿科力",
+        "bidding_increase": "0.50%",
+        "bidding_volume": "1,600.00",
+        "bidding_amount": "6.80万",
+        "rank": "354",
+        "volume": "79.58万",
+        "next_bidding_increase": "3.18%",
+        "next_bidding_volume": "30.10万",
+        "next_bidding_amount": "1,444.80万"
     }
 ]
